--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bunyan-rotating-file-stream": "^1.6.3",
+    "config": "^3.0.0",
+    "convict": "^4.4.0",
     "cross-env": "^5.2.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-bunyan-logger": "^1.3.3",
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
+    "mkdirp": "^0.5.1",
     "module-alias": "^2.1.0"
   }
 }
