--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
   "dependencies": {
     "bunyan-rotating-file-stream": "^1.6.3",
     "config": "^3.0.0",
+    "connect-mongo": "^2.0.3",
     "convict": "^4.4.0",
+    "cookie-parser": "^1.4.3",
     "cross-env": "^5.2.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-bunyan-logger": "^1.3.3",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
     "mkdirp": "^0.5.1",
-    "module-alias": "^2.1.0"
+    "module-alias": "^2.1.0",
+    "mongoose": "^5.3.14",
+    "parseurl": "^1.3.2",
+    "session": "^0.1.0"
   }
 }
