--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "scripts": {
     "server-prod": "cross-env NODE_ENV=production nodemon index.js",
     "server-dev": "cross-env NODE_ENV=dev nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test mocha --timeout 4000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "await-to-js": "^2.1.1",
+    "bcrypt": "^3.0.2",
     "bunyan-rotating-file-stream": "^1.6.3",
     "config": "^3.0.0",
     "connect-mongo": "^2.0.3",
@@ -34,10 +36,17 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
+    "joi": "^14.3.0",
     "mkdirp": "^0.5.1",
     "module-alias": "^2.1.0",
     "mongoose": "^5.3.14",
     "parseurl": "^1.3.2",
     "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.2.0",
+    "faker": "^4.1.0"
   }
 }
